--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,21 +28,22 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Install dependencies using conda
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if (Test-Path requirements.txt) { pip install -r requirements.txt }
-
-    - name: Verify flake8 installation
-      run: |
-        python -m flake8 --version
+        conda env create -f env/environments.yml
+        conda activate mnist
 
     - name: Lint with flake8
+      shell: bash
       run: |
-        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        conda activate mnist-env
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
+      shell: bash
       run: |
+        conda activate mnist-env
         pytest --maxfail=5 --disable-warnings
+
