--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -9,8 +9,10 @@ jobs:
       max-parallel: 5
 
     steps:
+    # Step 1: Checkout the repository
     - uses: actions/checkout@v4
     
+    # Step 2: Set up Miniconda
     - name: Set up Miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
@@ -18,32 +20,32 @@ jobs:
         python-version: "3.11"
         activate-environment: mnist
 
+    # Step 3: Install dependencies
     - name: Install dependencies
       run: |
         conda env update --file env/environments.yml --name mnist
+        conda run -n mnist pip install flake8 pytest pytest-cov coveralls
 
+    # Step 4: Lint with flake8
     - name: Lint with flake8
       run: |
-        conda run -n mnist pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
         conda run -n mnist flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         conda run -n mnist flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+    # Step 5: Run tests with pytest and collect coverage
     - name: Run tests with pytest and collect coverage
       run: |
-        conda run -n mnist pip install pytest coverage
-        conda run -n mnist coverage run --source=src -m pytest
+        conda run -n mnist pytest --cov=src --cov=tests --cov-report=xml --cov-report=term
 
+    # Step 6: Generate coverage report
     - name: Generate coverage report
       run: |
         conda run -n mnist coverage report
         conda run -n mnist coverage html
 
+    # Step 7: Upload coverage to Coveralls
     - name: Upload coverage to Coveralls
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
-        conda run -n mnist pip install coveralls
         conda run -n mnist coveralls
-
