--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore Python cache directories and files
 __pycache__/
 .pytest_cache/
-src/notebooks/
+main.ipynb
 tests/test_model/
 *.pyc
 *.pyo
